src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Areas_of_Interest__c</fullName>
        <label>Areas of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engagement/Wellness</fullName>
                </value>
                <value>
                    <fullName>Transparency</fullName>
                </value>
                <value>
                    <fullName>Population Management</fullName>
                </value>
                <value>
                    <fullName>Provider search tool</fullName>
                </value>
                <value>
                    <fullName>International Offering</fullName>
                </value>
                <value>
                    <fullName>Open Enrollment Capabilities</fullName>
                </value>
                <value>
                    <fullName>Benefit Admin Capabilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2B_Newsletter_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>B2B Newsletter Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <label>Campaign ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Referral_URL__c</fullName>
        <label>Campaign Referral URL</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ARDI__c</fullName>
        <label>Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AR__c</fullName>
        <label>Address Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ATZ__c</fullName>
        <label>Address Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AV__c</fullName>
        <label>Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__LES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lead Email Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;5,000</fullName>
                </value>
                <value>
                    <fullName>5,001 - 15,000</fullName>
                </value>
                <value>
                    <fullName>&gt;15,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Payer</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document__c</fullName>
        <label>Document</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility__c</fullName>
        <label>Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eligible</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <inlineHelpText>&apos;This is some text, or not, doesnt matter&apos;&apos;This is some text, or not, doesnt matter&apos;&apos;This is some text, or not, doesnt matter&apos;&apos;This is some text, or not, doesnt matter&apos;</inlineHelpText>
        <label>First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generated_From__c</fullName>
        <description>Field to identify where a lead was generated from as it relates to Optum/UHC relationship.</description>
        <inlineHelpText>Field to identify where a lead was generated from as it relates to Optum/UHC relationship.</inlineHelpText>
        <label>Generated From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>UHC Internal Conference</fullName>
                </value>
                <value>
                    <fullName>UHC Sales meeting</fullName>
                </value>
                <value>
                    <fullName>UHC SAE meeting</fullName>
                </value>
                <value>
                    <fullName>Optum Internal Conference</fullName>
                </value>
                <value>
                    <fullName>Optum Sales meeting</fullName>
                </value>
                <value>
                    <fullName>Optum SAE meeting</fullName>
                </value>
                <value>
                    <fullName>External conferences</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <description>&apos;This is some text, or not, doesnt matter&apos;</description>
        <formula>&apos;This is some text, or not, doesnt matter&apos;</formula>
        <inlineHelpText>&apos;This is some text, or not, doesnt matter&apos;</inlineHelpText>
        <label>Help Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ineligible_Reason1__c</fullName>
        <label>Ineligible Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Academic/research inquiry</fullName>
                </value>
                <value>
                    <fullName>Competitor inquiry</fullName>
                </value>
                <value>
                    <fullName>Current client- employer group</fullName>
                </value>
                <value>
                    <fullName>Current client- payer/provider</fullName>
                </value>
                <value>
                    <fullName>Direct consumer inquiry</fullName>
                </value>
                <value>
                    <fullName>Direct employer group</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Fake info/invalid info</fullName>
                </value>
                <value>
                    <fullName>Marketing Agency Inquiry</fullName>
                </value>
                <value>
                    <fullName>Not a decision maker</fullName>
                </value>
                <value>
                    <fullName>Not responsive to follow ups</fullName>
                </value>
                <value>
                    <fullName>Small-Market Consultant</fullName>
                </value>
                <value>
                    <fullName>Vendor Inquiry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ineligible_Reason__c</fullName>
        <description>Required if Lead is Ineligible.</description>
        <inlineHelpText>Required if Lead is Ineligible.</inlineHelpText>
        <label>Ineligible Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ineligible__c</fullName>
        <formula>IF(

ISPICKVAL(Status, &apos;Ineligible&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ineligible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Campaign_Info__c</fullName>
        <label>Lead Campaign Info</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <formula>IF(

CONTAINS(Short_Referral_String__c, &apos;utm_medium=email&apos;), &apos;Email&apos;,

IF(

CONTAINS(Short_Referral_String__c, &apos;utm_medium=newsletter&apos;), &apos;Newsletter&apos;,

IF(

CONTAINS(Short_Referral_String__c, &apos;utm_medium=paid&apos;), &apos;Paid&apos;,

IF(

CONTAINS(Short_Referral_String__c, &apos;utm_medium=organic&apos;), &apos;Organic&apos;, &apos;N/A&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Referral_String__c</fullName>
        <label>Short Referral String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Ineligible</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Leads1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Eligible,Ineligible</value>
        </filters>
        <label>My Open Leads</label>
    </listViews>
    <listViews>
        <fullName>New_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>New Leads</label>
        <queue>New_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Optum_UHG_Leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Optum/UHG Leads</label>
        <queue>Optum_UHG_Leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales_Ops_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.LAST_NAME</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>LEAD.FIRST_NAME</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>First_Name__c</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>notContain</operation>
            <value>test</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notContain</operation>
            <value>@gmail.com</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notContain</operation>
            <value>@aol.com</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notContain</operation>
            <value>@comcast.net</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notContain</operation>
            <value>@yahoo.com</value>
        </filters>
        <filters>
            <field>LEAD.EMAIL</field>
            <operation>notContain</operation>
            <value>@hotmail.com</value>
        </filters>
        <label>Sales Ops Open Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Leads_with_Eligibility_of_Ineligible</fullName>
        <active>true</active>
        <description>Leads with a Status of &apos;Ineligible&apos; require a reason for ineligibility.</description>
        <errorConditionFormula>AND(
$Profile.Id &lt;&gt; &apos;00eE0000000j7b3&apos;,
$Profile.Id &lt;&gt; &apos;00eE0000000VOcx&apos;,
ISPICKVAL(Status, &apos;Ineligible&apos;),
ISBLANK(TEXT( Ineligible_Reason1__c)))</errorConditionFormula>
        <errorDisplayField>Ineligible_Reason__c</errorDisplayField>
        <errorMessage>Leads with a Status of &apos;Ineligible&apos; require a reason for ineligibility.</errorMessage>
    </validationRules>
</CustomObject>